# LivelyStudio

./: .gitignore  Cargo.toml  README.md  craco.config.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: main.yml
public/: index.html
puppeteer-rust/: Cargo.toml
puppeteer-rust/src/: lib.rs
puppeteer-rust/src/compiler/: compiled.rs  mod.rs  properties.rs  status.rs  steps.rs  utils.rs
puppeteer-rust/src/compiler/blocks/: block.rs  breakpoint.rs  location.rs  mod.rs  move_trajectory.rs  waypoint.rs
puppeteer-rust/src/compiler/trajectories/: mod.rs
src/: App.css  App.js  App.jsx  Constants.js  Menu.jsx  defaults.js  index.css  programSpec.js  solver-worker.js  store-ref.js  store.js  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  icon.source.afdesign
src-tauri/src/: main.rs  plugin_lively_tk.rs
src/DefaultRobots/: index.js  nao.js  panda.js  pepper.js  ur3.js  ur3robotiq.js  ur5robotiq.js
src/Elements/: DropMenu.jsx
src/Elements/Icons/: Basic.jsx  Bounding.jsx  Forces.jsx  Liveliness.jsx  Matching.jsx  Mirroring.jsx
src/Meshes/: index.js
src/Meshes/Nao/: LShoulderPitch.js
src/Meshes/Panda/: finger.js  link0.glb  link0.js  link1.glb  link1.js  link2.glb  link2.js  link3.glb  link3.js  link4.js  link5.js  link6.js  link7.js
src/Meshes/Pepper/collision/: Camera_base.js  Camera_body.js  Camera_visor.js  HeadPitch.js  HeadYaw.js  HipPitch.js  HipRoll.js  KneePitch.js  LElbowRoll.js  LElbowYaw.js  LFinger11.js  LFinger12.js  LFinger13.js  LFinger21.js  LFinger22.js  LFinger23.js  LFinger31.js  LFinger32.js  LFinger33.js  LFinger41.js  LFinger42.js  LFinger43.js  LShoulderPitch.js  LShoulderRoll.js  LThumb1.js  LThumb2.js  LWristYaw.js  RElbowRoll.js  RElbowYaw.js  RFinger11.js  RFinger12.js  RFinger13.js  RFinger21.js  RFinger22.js  RFinger23.js  RFinger31.js  RFinger32.js  RFinger33.js  RFinger41.js  RFinger42.js  (+11 more)
src/Meshes/Pepper/visual/: D435.js  HeadPitch.glb  HeadPitch.js  HeadYaw.js  HipPitch.js  HipRoll.js  KneePitch.js  LElbowRoll.js  LElbowYaw.js  LFinger11.js  LFinger12.js  LFinger13.js  LFinger21.js  LFinger22.js  LFinger23.js  LFinger31.js  LFinger32.js  LFinger33.js  LFinger41.js  LFinger42.js  LFinger43.js  LShoulderPitch.js  LShoulderRoll.js  LThumb1.js  LThumb2.js  LWristYaw.js  RElbowRoll.js  RElbowYaw.js  RFinger11.js  RFinger12.js  RFinger13.js  RFinger21.js  RFinger22.js  RFinger23.js  RFinger31.js  RFinger32.js  RFinger33.js  RFinger41.js  RFinger42.js  RFinger43.js  (+10 more)
src/Tabs/: Behaviors.jsx  Shapes.jsx  URDF.jsx
src/helpers/: Comparison.js  Conversion.js  Geometry.js  InfoParsing.js
