[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }
thiserror = "1.0"
lively_tk = {git = "https://github.com/Wisc-HCI/lively_tk", rev="be6fdebb76e7435cecce9516ce5b82951fa2cd9d"}
game-loop = "0.9.1"
urdf-rs = "0.6.4"
nalgebra = { version = "0.31", features = ["serde-serialize-no-std"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = 3
debug = true
codegen-units = 1

[profile.dev]
opt-level = 3
debug = true
codegen-units = 1
